# Ayaya

./: .gitignore  CMakeLists.txt  README.md  generate_folder_tree.py  generate_tree.py
assets/: AssetRegistry.yaml
assets/Editor/materials/: DefaultPBR.mat
assets/Editor/shaders/Fallback/: fallback.frag  fallback.vert
assets/Editor/shaders/PBR/: pbr.frag  pbr.vert
assets/Editor/shaders/PostProcess/: postprocess.frag  postprocess.vert
assets/Editor/shaders/Skybox/: skybox.frag  skybox.vert
assets/Editor/shaders/UI/: grid.vert  outline.vert
assets/Editor/shaders/Unlit/: unlit.frag  unlit.vert
assets/materials/: NewMaterial (1).mat  NewMaterial (2).mat  NewMaterial (3).mat  NewMaterial.mat  pbr.mat  pbr2.mat
assets/materials/testPBRbySphere/: NewMaterial (4).mat  Sphere_M0_R100_Mat.mat  Sphere_M0_R16_Mat.mat  Sphere_M0_R33_Mat.mat  Sphere_M0_R50_Mat.mat  Sphere_M0_R5_Mat.mat  Sphere_M100_R100_Mat.mat  Sphere_M100_R5_Mat.mat  Sphere_M100_R83_Mat.mat  Sphere_M16_R16_Mat.mat  Sphere_M16_R50_Mat.mat  Sphere_M16_R5_Mat.mat  Sphere_M33_R100_Mat.mat  Sphere_M33_R16_Mat.mat  Sphere_M33_R33_Mat.mat  Sphere_M33_R50_Mat.mat  Sphere_M33_R5_Mat.mat  Sphere_M33_R83_Mat.mat  Sphere_M50_R100_Mat.mat  Sphere_M50_R16_Mat.mat  Sphere_M50_R50_Mat.mat  Sphere_M50_R66_Mat.mat  Sphere_M50_R83_Mat.mat  Sphere_M66_R16_Mat.mat  Sphere_M83_R50_Mat.mat  Sphere_M83_R66_Mat.mat
assets/materials/testPBRbySphere_textured/: NewMaterial (1).mat  NewMaterial (2).mat  Sphere_M0_R66_Mat.mat  Sphere_M0_R83_Mat.mat  Sphere_M100_R16_Mat.mat  Sphere_M100_R33_Mat.mat  Sphere_M100_R50_Mat.mat  Sphere_M100_R5_Mat.mat  Sphere_M100_R66_Mat.mat  Sphere_M16_R100_Mat.mat  Sphere_M16_R33_Mat.mat  Sphere_M16_R66_Mat.mat  Sphere_M16_R83_Mat.mat  Sphere_M33_R66_Mat.mat  Sphere_M50_R33_Mat.mat  Sphere_M50_R5_Mat.mat  Sphere_M66_R100_Mat.mat  Sphere_M66_R33_Mat.mat  Sphere_M66_R50_Mat.mat  Sphere_M66_R5_Mat.mat  Sphere_M66_R66_Mat.mat  Sphere_M66_R83_Mat.mat  Sphere_M83_R100_Mat.mat  Sphere_M83_R16_Mat.mat  Sphere_M83_R33_Mat.mat  Sphere_M83_R5_Mat.mat  Sphere_M83_R83_Mat.mat
assets/scenes/: Example.ayaya  Untitled.ayaya  Untitled2.ayaya  testFallback.ayaya  testPBR.ayaya  testPBRbySphere.ayaya  testPBRbySphere_textured.ayaya  testSphere.ayaya
assets/shaders/: default.frag  default.vert  grid.frag  grid.vert  lighting.frag  lighting.vert  outline.frag
assets/shaders/PBR/: pbr.frag  pbr.vert
src/: ayapch.h
src/AyayaEditor/: AyayaEditorApp.cpp  EditorCamera.cpp  EditorCamera.hpp  EditorLayer.cpp  EditorLayer.hpp
src/AyayaEditor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
src/Engine/: Ayaya.hpp
src/Engine/Asset/: Asset.hpp  AssetManager.cpp  AssetManager.hpp
src/Engine/Core/: Application.cpp  Application.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Timestep.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp
src/Engine/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/Engine/Platform/OpenGL/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLInput.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLTexture2D.cpp  OpenGLTexture2D.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp
src/Engine/Renderer/: Buffer.cpp  Buffer.hpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Framebuffer.hpp  Frustum.hpp  Material.hpp  MaterialSerializer.cpp  MaterialSerializer.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureCube.cpp  TextureCube.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp
src/Engine/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  SceneSerializer.cpp  SceneSerializer.hpp
src/Engine/Utils/: PlatformUtils.cpp  PlatformUtils.hpp
src/Sandbox/: ExampleLayer.hpp  Main.cpp  SandboxApp.cpp  SandboxLayer.hpp  TestLayer.hpp
